@startuml Class Diagram

class Event {
    - eventCode: String
    - name: String
    - date: Date
    - location: String
    - description: String
    - inscriptions: List<Inscription>
    - capacity: Int
    + countInscriptions(): Int
    + showEvent(): void

}

class Guest {
    - name: String
    - email: String
    - phone: String
    - dni: String
    - inscriptions: List<Inscription>
}

class Inscription {
    - event: Event
    - guest: Guest
    - status: String
    + addInscription(): void
    + deleteInscription(): void
    + showInscription(): void
}

Event "1" *-- "0..*" Inscription
Guest "1" *-- "0..*" Inscription
